fix: Enable CORS for Vercel and all remote origins